crossword edition widgets

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,2 @@
-# Internal routing configuration to handle ESI
-#_internal:
-#   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
-#   prefix:   /_internal
+crosswords:
+    resource: "@AnyxCrosswordBundle/Resources/config/routing.yml"
