Update Symfony, saving words

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,4 +99,4 @@ fos_rest:
         
 #aliases
 services:
-    dm: "@doctrine.odm.mongodb.document_manager"
+    anyx.dm: "@doctrine.odm.mongodb.document_manager"
