--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,2 +1,4 @@
 crosswords:
     resource: "@AnyxCrosswordBundle/Resources/config/routing.yml"
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"    
