--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,11 @@
+AnyxUserBundle:
+    resource: "@AnyxUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 crosswords:
-    resource: "@AnyxCrosswordBundle/Resources/config/routing.yml"
+    resource: "@AnyxCrosswordBundle/Resources/config/routing/common.yml"
 fos_js_routing:
-    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"    
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+fos_user:
+    resource: "@AnyxCrosswordBundle/Resources/config/routing/fos_user.yml"
