--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,24 +33,7 @@ assetic:
         #     jar: %kernel.root_dir%/java/compiler.jar
         # yui_css:
         #     jar: %kernel.root_dir%/java/yuicompressor-2.4.2.jar
-
-# Doctrine Configuration
-doctrine:
-    dbal:
-        driver:   %database_driver%
-        host:     %database_host%
-        port:     %database_port%
-        dbname:   %database_name%
-        user:     %database_user%
-        password: %database_password%
-        charset:  UTF8
-        types:
-            point: Anyx\CrosswordBundle\Doctrine\Type\Point1
-
-    orm:
-        auto_generate_proxy_classes: %kernel.debug%
-        auto_mapping: true
-          
+   
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
@@ -75,7 +58,7 @@ doctrine_mongodb:
             server: mongodb://127.0.0.1:27017
             options:
                 connect: true
-    default_database: test_database
+    default_database: crosswords_%kernel.environment%
     document_managers:
         default:
             mappings:
