--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+AnyxSocialBundle:
+    resource: "@AnyxSocialBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 AnyxUserBundle:
     resource: "@AnyxUserBundle/Controller/"
     type:     annotation
