--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+AnyxSocialUserBundle:
+    resource: "@AnyxSocialUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 AnyxSocialBundle:
     resource: "@AnyxSocialBundle/Controller/"
     type:     annotation
@@ -7,6 +12,10 @@ AnyxUserBundle:
     resource: "@AnyxUserBundle/Controller/"
     type:     annotation
 
+#anyx_social_bundle:
+#    resource: anyx_social.controller.login
+#    type:     annotation
+  
 crosswords:
     resource: "@AnyxCrosswordBundle/Resources/config/routing/common.yml"
 fos_js_routing:
