--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,16 +7,19 @@ AnyxUserBundle:
     resource: "@AnyxUserBundle/Controller/"
     type:     annotation
 
-#anyx_social_bundle:
-#    resource: anyx_social.controller.login
-#    type:     annotation
-  
 crosswords:
     resource: "@AnyxCrosswordBundle/Resources/config/routing/common.yml"
+
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 fos_user:
     resource: "@AnyxCrosswordBundle/Resources/config/routing/fos_user.yml"
-#crosswords_rest:
-#    type:     rest
-#    resource: Anyx\CrosswordBundle\Controller\CrosswordRestController
+
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin'
