--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+AnyxPageBundle:
+    resource: "@AnyxPageBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 AnyxSocialUserBundle:
     resource: "@AnyxSocialUserBundle/Controller/"
     type:     annotation
