--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -22,6 +22,9 @@ monolog:
 assetic:
     use_controller: true
 
+swiftmailer:
+    transport: null
+
 jms_serializer:
     metadata:
         auto_detection: true
