--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -24,3 +24,19 @@ assetic:
 
 swiftmailer:
     transport: null
+
+anyx_social:
+  services:
+    facebook:
+      client_id:         114949468588006
+      secret:            15266750e6ae656f3fab05a807c405f5
+      scope:             email,user_about_me
+    twitter:
+      client_id:         7EpGiK7VCRTnLzEoELme2w
+      secret:            rM3NuRHI2v8I9AKKOgIZnMTxwsYck4VyhmlLe7ip8
+      scope:             email,user_about_me
+    vkontakte:
+      client_id:         2399701
+      secret:            jpIAY6YiK2JnIxIbSbTH
+      scope:             notify,offline
+      user_fields:       uid, first_name, last_name, nickname, screen_name, sex, bdate (birthdate), city, country, timezone, photo, photo_medium, photo_big, has_mobile, rate, contacts, education, online, counters
