Uppdate symfony, elastic

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,7 +88,7 @@ fos_user:
     profile:
       form:
         type: anyx_user_profile
-        handler: anyx_user.form.handler.registration
+#        handler: anyx_user.form.handler.registration
 
 anyx_social_user:
   db_driver: mongodb
@@ -127,6 +127,37 @@ anyx_social:
       scope:             notify,offline
       user_fields:       uid, first_name, last_name, nickname, screen_name, sex, bdate (birthdate), city, country, timezone, photo, photo_medium, photo_big, has_mobile, rate, contacts, education, online, counters
 
+
+foq_elastica:
+    clients:
+        default: { host: localhost, port: 9200 }
+    indexes:
+        website:
+            client: default
+            settings:
+                index:
+                  analysis:
+                    analyzer: 
+                      ru_snowball:
+                        type : snowball
+                        language: Russian
+                        filter: [standart, lowercase, ru_snowball_filter]
+                    filter:
+                      ru_snowball_filter:
+                        type: snowball
+                        language: Russian
+            types:
+                crossword:
+                  mappings:
+                    title: {boost: 5, analyzer: ru_snowball}
+                    description: {boost: 4, analyzer: ru_snowball}
+                    countSolving: {boost: 3}
+                  persistence:
+                      driver: mongodb
+                      model: Anyx\CrosswordBundle\Document\Crossword
+                      provider: 
+                      listener:
+                      finder:
 
 sonata_block:
     default_contexts: [cms]
