--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,18 @@
         "sensio/distribution-bundle": "2.1.*",
         "sensio/framework-extra-bundle": "2.1.*",
         "sensio/generator-bundle": "2.1.*",
-        "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*",
+        "jms/security-extra-bundle": "1.4.x-dev",
+        "jms/di-extra-bundle": "1.3.*",
         "doctrine/mongodb-odm-bundle": "3.0.*",
         "friendsofsymfony/user-bundle": "*",
-        "friendsofsymfony/jsrouting-bundle": "1.0.x-dev",
+        "friendsofsymfony/jsrouting-bundle": "1.1.*@dev",
         "sonata-project/admin-bundle": "dev-master",
         "sonata-project/cache-bundle": "dev-master",
         "sonata/doctrine-mongodb-admin-bundle": "dev-master",
         "white-october/pagerfanta-bundle": "dev-master",
         "jms/serializer-bundle": "1.0.x-dev",
-        "anyx/social-user-bundle": "dev-master"
+        "anyx/social-user-bundle": "dev-master",
+        "exercise/elastica-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
